kibana-elb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-elb
  namespace: elk
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5601
      protocol: TCP
      name: http
  selector:
    app: kibana
